moving towards a home page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,22 @@
+
+
+	<header class="site-header">
+		<h1>
+<!--//    
+			<span class="smalltype">the only authorized online self-published guide to</span><br>
+			<span id="bigcopy">EVERYTHING</span><br>
+			<span class="smalltype" style="margin: -40px 0 0 0;">there is to know about</span><br>
+			<a href="http://jdkunesh.com">jdKUNESH</a>
+//-->
+			<a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+		</h1>
+	</header>
+<!--//    
 <header class="site-header">
 
   <div class="wrapper">
 
-<!--//    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+<a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -21,8 +35,10 @@
         {% endfor %}
       </div>
     </nav>
-//-->
+
 
   </div>
 
 </header>
+
+//-->
