--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,18 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-<!-- //
-    <h2 class="footer-heading">{{ site.title }}</h2>
 
+		<ul style="margin: 10px 0 0 20px;">
+			<li><a href="http://www.twitter.com/jdkunesh/">Twitter</a></li>
+			<li><a href="http://www.linkedin.com/in/jasonkunesh/">LinkedIn</a></li>
+			<li><a href="http://www.flickr.com/photos/jdkunesh/">Flickr</a></li>
+			<li><a href="http://vimeo.com/jdkunesh">Vimeo</a></li>
+
+		</ul>
+
+<!-- //
+
+    <h2 class="footer-heading">{{ site.title }}</h2>
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
