--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,9 @@
 			<li><a href="http://www.linkedin.com/in/jasonkunesh/">LinkedIn</a></li>
 			<li><a href="http://www.flickr.com/photos/jdkunesh/">Flickr</a></li>
 			<li><a href="http://vimeo.com/jdkunesh">Vimeo</a></li>
+		</ul>
+		<ul style="margin: 10px 0 0 20px;">
+		    <li><a href="/colophon.html" title="colophon">Colophon</li>
 
 		</ul>
 
