--- a/_sass/site-jdk.scss
+++ b/_sass/site-jdk.scss
@@ -5,5 +5,9 @@
 https://github.com/twbs/bootstrap-sass
 
 ---
-    
+
+$font-size-base: 17px;
+$headings-font-weight: 600;
+$blockquote-font-size: $font-size-base;
+
 @import "bootstrap";
