--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,14 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-
+{% comment %}
 		<ul style="margin: 10px 0 0 20px;">
 			<li><a href="http://www.twitter.com/jdkunesh/">Twitter</a></li>
 			<li><a href="http://www.linkedin.com/in/jasonkunesh/">LinkedIn</a></li>
 			<li><a href="http://www.flickr.com/photos/jdkunesh/">Flickr</a></li>
 			<li><a href="http://vimeo.com/jdkunesh">Vimeo</a></li>
 		</ul>
+{% endcomment %}
 		<ul style="margin: 10px 0 0 20px;">
 		    <li><a href="/colophon.html" title="colophon">Colophon</li>
 
