generally cleaning up and making a decent looking website.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
 
     p, li {font-family: 'Raleway', sans-serif;}
     h1, h2, h3, h4, h5, h6 { font-family: 'Merriweather', serif;}
+    a { text-decoration:none;}
 
     /*body {
         font-size:1em;
