--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
+      <div class="wrapper" style="width:40%; margin: auto; padding:20px 5px;">
         {{ content }}
       </div>
     </div>
