--- a/css/site-jdk.scss
+++ b/css/site-jdk.scss
@@ -1,8 +1,6 @@
 ---
-# my custom styles using bootstrap are here: 
-
-
-https://github.com/twbs/bootstrap-sass
+# my custom styles using bootstrap are here:
+# https://github.com/twbs/bootstrap-sass
 
 ---
 
