adding some visual style

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,13 +12,17 @@
     <link rel="stylesheet" href="{{ "/css/site-jdk.css" | prepend: site.baseurl }}">
     <style>
 
-    p, li {font-family: 'Raleway', sans-serif;}
+    body {
+/*            font-size:1em;
+*/            background-color:#2ae;
+        }
+    p, li {
+        color: #530;
+        font-family: 'Raleway', sans-serif;}
     h1, h2, h3, h4, h5, h6 { font-family: 'Merriweather', serif;}
-    a { text-decoration:none;}
+    a { color: #ddf; text-decoration:none;}
 
-    /*body {
-        font-size:1em;
-    }
+    /*
         h1 { font-family: 'Arvo', arial, serif; font-weight: bold;
         font-size:6em;
         line-height:.8em;
