--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 <!--//
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 //-->
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:extra-light,regular,medium,bold" rel="stylesheet">
     <link rel="stylesheet" href="{{ "/css/site-jdk.css" | prepend: site.baseurl }}">
     <style>
 
@@ -18,8 +18,12 @@
         }
     p, li {
         color: #530;
-        font-family: 'Raleway', sans-serif;}
-    h1, h2, h3, h4, h5, h6 { font-family: 'Merriweather', serif;}
+        font-family: 'Raleway', sans-serif;
+        }
+    h1, h2, h3, h4, h5, h6 {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 200;
+    }
     a { color: #ddf; text-decoration:none;}
 
     /*
