--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -25,8 +25,6 @@ body {
     font-kerning: normal;
 }
 
-
-
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
@@ -36,8 +34,6 @@ ul, ol, dl, figure,
 %vertical-rhythm {
     margin-bottom: $spacing-unit / 2;
 }
-
-
 
 /**
  * Images
@@ -82,9 +78,10 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
+    font-family: 'Raleway', sans-serif;
+    // font-weight: 200;
     font-weight: $base-font-weight;
 }
-
 
 
 /**
