pulling out the jekyll

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
-	<header class="site-header" style="width:60%; margin: auto;padding-top:60px;">
-		<h1>
+<header class="site-header" style="width:60%; margin: auto;padding-top:60px;">
+<h1><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+</header>
+
+{% comment %}
 <!--//    
 			<span class="smalltype">the only authorized online self-published guide to</span><br>
 			<span id="bigcopy">EVERYTHING</span><br>
 			<span class="smalltype" style="margin: -40px 0 0 0;">there is to know about</span><br>
 			<a href="http://jdkunesh.com">jdKUNESH</a>
 //-->
-			<a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-		</h1>
-	</header>
 <!--//    
 <header class="site-header">
 
@@ -40,3 +40,4 @@
 </header>
 
 //-->
+{% endcomment %}
