cut out sass and bootstrap from use in the one pager of our app.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,51 +1,24 @@
-<footer class="site-footer">
+<footer>
+	<ul>
+		<li><a href="http://www.twitter.com/jdkunesh/" title="">Twitter</a></li>
+		<li><a href="http://www.linkedin.com/in/jasonkunesh/" title="">LinkedIn</a></li>
+		<li><a href="http://www.flickr.com/photos/jdkunesh/" title="">Flickr</a></li>
+		<li><a href="https://medium.com/@jdkunesh" title="">Medium</a></li>
+		<li><a href="ttps://www.instagram.com/jdkunesh/" title="">Instagram</a></li>
+		<li><a href="https://www.facebook.com/jdkunesh" title="">Facebook</a></li>
+		<li><a href="http://vimeo.com/jdkunesh" title="">Vimeo</a></li>
+	</ul>
 
-  <div class="wrapper">
 {% comment %}
-		<ul style="margin: 10px 0 0 20px;">
-			<li><a href="http://www.twitter.com/jdkunesh/">Twitter</a></li>
-			<li><a href="http://www.linkedin.com/in/jasonkunesh/">LinkedIn</a></li>
-			<li><a href="http://www.flickr.com/photos/jdkunesh/">Flickr</a></li>
-			<li><a href="http://vimeo.com/jdkunesh">Vimeo</a></li>
-		</ul>
-		<ul style="margin: 10px 0 0 20px;">
-		    <li><a href="/colophon.html" title="colophon">Colophon</li>
+<!--//
+jdkunesh
+jdkunesh
+jdkunesh
+jdkunesh
+jdkunesh
 
-		</ul>
+Long short stories from the 45th parallel.
+
+//-->
 {% endcomment %}
-
-<!-- //
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
-    </div>
-// -->
-  </div>
-
 </footer>
