--- a/css/site-jdk.scss
+++ b/css/site-jdk.scss
@@ -7,18 +7,23 @@
 ---
 
 
+// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables" to use the icon fonts
+// i do not have icon fonts currently installed, though. :D
+// @import "bootstrap-sprockets";
+
+@import "bootstrap/variables";
+
 // All bootstrap variables may be found here: http://getbootstrap.com/customize/#less-variables
+// Customize styles here
+
+$font-family-sans-serif:  'Raleway', sans-serif !default;
 
 $font-size-base: 17px;
 $headings-font-weight: 600;
 $blockquote-font-size: $font-size-base;
 
 
-// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables" to use the icon fonts
-// i do not have icon fonts currently installed, though. :D
-// @import "bootstrap-sprockets";
 
-@import "bootstrap/variables";
 
 // uncomment the line below for all of bootstrap
 // @import "bootstrap";
