pulled out all the bootstrap and such to make a very simple 1 page site. interesting night

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,12 @@
+/*
+// not in use as of 11/2016
+// jekyll file
+*/
+
 /**
  * Site header
  */
+
 .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
