--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,8 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+// not in use as of 11/2016
+
 @charset "utf-8";
 
 // Our variables
