--- a/css/site-jdk.scss
+++ b/css/site-jdk.scss
@@ -1,38 +1,91 @@
 ---
-# my custom styles using bootstrap are here:
-# https://github.com/twbs/bootstrap-sass
-# these are my actual styles, reliant upon /bootstrap & _bootstrap.scss
-# to see which variables you can set, go to: _sass/bootstrap/_variables.scss
-# modify them here to override them while still maintaining forward compatability.
+# This is the only file I use now to deliver css to my website.
+# I may end up killing this and bringing it all into the index.html file.
+# 
 ---
+@charset "utf-8";
 
-
-// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables" to use the icon fonts
-// i do not have icon fonts currently installed, though. :D
-// @import "bootstrap-sprockets";
-
-@import "bootstrap/variables";
-
-// All bootstrap variables may be found here: http://getbootstrap.com/customize/#less-variables
-// Customize styles here
+//== Typography
+//
+//## Font, line-height, and color for body text, headings, and more.
 
 $font-family-sans-serif:  'Raleway', sans-serif !default;
+$font-family-serif:       'Raleway', serif !default;
+
+//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
+$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
+$font-family-base:        $font-family-sans-serif !default;
+
+$font-size-base:          14px !default;
+$font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
+
+$font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
+$font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
+$font-size-h3:            ceil(($font-size-base * 1.7)) !default; // ~24px
+$font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-h5:            $font-size-base !default;
+$font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
+
+//** Unit-less `line-height` for use in components like buttons.
+$line-height-base:        1.428571429 !default; // 20/14
+
+//** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
+$line-height-computed:    floor(($font-size-base * $line-height-base)) !default; // ~20px
+
+//** By default, this inherits from the `<body>`.
+$headings-font-family:    'Raleway', sans-serif !default;
+$headings-font-weight:    900 !default;
+$headings-line-height:    1.1 !default;
+$headings-color:          inherit !default;
 
 $font-size-base: 17px;
 $headings-font-weight: 600;
 $blockquote-font-size: $font-size-base;
 
+// Our variables
+$base-font-family: 'Raleway', sans-serif;
+$base-font-size:   16px;
+$base-font-weight: 400;
+$small-font-size:  $base-font-size * 0.875;
+$base-line-height: 1.5;
 
+$spacing-unit:     30px;
 
+$text-color:       #111;
+$background-color: #ddf;
+$brand-color:      #2ae;
 
-// uncomment the line below for all of bootstrap
-// @import "bootstrap";
-//
+$grey-color:       #828282;
+$grey-color-light: lighten($grey-color, 40%);
+$grey-color-dark:  darken($grey-color, 25%);
 
-@import "bootstrap/mixins";
-@import "bootstrap/normalize";
-@import "bootstrap/print";
-@import "bootstrap/scaffolding";
-@import "bootstrap/type";
-@import "bootstrap/grid";
-@import "bootstrap/responsive-utilities";
+// Width of the content area
+$content-width:    800px;
+
+$on-palm:          600px;
+$on-laptop:        800px;
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: $font-family-sans-serif;
+    font-weight: $headings-font-weight;
+}
+
+p {
+    font-family: $font-family-sans-serif;
+
+}
+
+a {
+    color: $brand-color;
+    text-decoration: none;
+
+    &:visited {
+        color: darken($brand-color, 15%);
+    }
+
+    &:hover {
+        color: $text-color;
+        text-decoration: underline;
+    }
+}
