--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,5 +7,8 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway:extra-light,regular,medium,bold" rel="stylesheet">
 <link rel="stylesheet" href="{{ "/css/site-jdk.css" | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+{% comment %}
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+{% endcomment %}
 </head>
