updated with new status

--- a/css/site-jdk.scss
+++ b/css/site-jdk.scss
@@ -75,7 +75,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: $base-font-weight;
 }
 
-p {
+p, li {
     color: $text-color;
     font-family: $font-family-sans-serif;
     font-weight: $base-font-weight;
@@ -95,4 +95,19 @@ a {
         color: $text-color;
         text-decoration: underline;
     }
+}
+
+ul {
+    list-style:none;
+    text-align: center;
+    padding:0;
+    margin:0;
+}
+
+li {
+    float: left;
+    margin:0;
+    padding: 0 1em 0 0;
+    text-align: left;
+    text-decoration: none;
 }
