--- a/_includes/case.html
+++ b/_includes/case.html
@@ -1,12 +1,9 @@
-<div class="card-deck">
-      {% for item in site.data.portfolio %}
-        <a href="{{ site.baseurl }}{{ item.url }}">
-          <div class="card card-home">
-            <img src="{{ item.image }}" alt="{{ item.alt_text }}"/>
-            <div class="card-body">
-                <h2>{{ item.name }}</h2>
-            </div>
-          </div>
-        </a>
-      {% endfor %}
-</div>
+<h1>this is the title {{ item.name }}</h1>
+
+  <a href="{{ site.baseurl }}{{ item.url }}">
+    <div>
+      <img src="{{ item.image }}" alt="{{ item.alt_text }}"/>
+      <div class="card-body">
+      </div>
+    </div>
+  </a>
