--- a/css/site-jdk.scss
+++ b/css/site-jdk.scss
@@ -70,7 +70,7 @@ body {
     background-color:$background-color;
 }
 h1, h2, h3, h4, h5, h6 {
-    color: #2ae;
+    color: #222;
     font-family: $font-family-sans-serif;
     font-weight: $base-font-weight;
 }
