--- a/css/site-jdk.scss
+++ b/css/site-jdk.scss
@@ -9,8 +9,8 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif:  'Raleway', sans-serif !default;
-$font-family-serif:       'Raleway', serif !default;
+$font-family-sans-serif:  'Nunito', sans-serif !default;
+$font-family-serif:       'Playfair Display', serif !default;
 
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
@@ -74,6 +74,14 @@ h1, h2, h3, h4, h5, h6 {
     font-family: $font-family-sans-serif;
     font-weight: $base-font-weight;
 }
+
+h1 {
+    color: #222;
+    font-family: $font-family-serif;
+    font-weight: 700;
+    font-size: 3em;
+}
+
 
 p, li {
     color: $text-color;
