--- a/_includes/era.html
+++ b/_includes/era.html
@@ -1,4 +1,4 @@
-{% assign era = site.data.work | where: "name", page.title %}
+{% assign era = site.data.work | where: "title", page.title %}
 {% for item in era %}
     <img src="{{ item["image"] }}" alt="{{ item.alt_text }}" width="50%" />
     <div class="card-deck">
