--- a/_layouts/case.html
+++ b/_layouts/case.html
@@ -1,17 +1,5 @@
 ---
-layout: default
+layout: page
 ---
 
-CASE CASE CASE
-
-<article class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <div class="post-content">
-    {{ content }}
-  </div>
-
-</article>
+{{ content }}
