--- a/_includes/case.html
+++ b/_includes/case.html
@@ -1,13 +1,16 @@
 
-{% assign item = site.data.work.cases | where: "cases.title", page.title %}
+{% assign item = site.data.work.cases | where: "title", page.title %}
 
-{% for case in item %}
+
+{{ item }}
+
+{% for thing in item %}
 <a href="{{ site.baseurl }}{{ case.url }}">
   <div class="card card-home">
-    <img src="{{ case.image }}" alt="{{ case.alt_text }}" width="50%"/>
+    <img src="{{ thing.image }}" alt="{{ thing.alt_text }}" width="50%"/>
     <div class="card-body">
-        <h2>{{ case.title }}</h2>
-        <p>{{ case.role }}, {{ case.role_timeframe }}</p>
+        <h2>{{ thing.title }}</h2>
+        <p>{{ thing.role }}, {{ thing.role_timeframe }}</p>
     </div>
   </div>
 </a>
