--- a/_includes/era.html
+++ b/_includes/era.html
@@ -1,15 +1,12 @@
 
-{% assign era = site.data.work[current_index] | 0 %}
-{% assign next_era = site.data.work[next_index] | 1 %}
-{% assign previous_era = site.data.work[previous_index] | 5 %}
+{% assign era = site.data.work[current_index] %}
+{% assign next_era = site.data.work[next_index] %}
+{% assign previous_era = site.data.work[previous_index] %}
 
 <ul title="other work">
   <li><a href="{{ site.baseurl }}{{ previous_era.url }}">Back to {{ previous_era.title }}</a></li>
   <li><a href="{{ site.baseurl }}{{ next_era.url }}">Next up {{ next_era.title }}</a></li>
 </ul>
-
-
-
 <img src="{{ era.image }}" alt="{{ era.alt_text }}" width="50%" />
 {% if era.description != null %}
 {{ era.description | markdownify  }}
