--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,20 @@
 <html lang="en">
 {% include head.html %}
 <body>
-{% include header.html %}
 {% comment %}
 <!--//    
 //-->
 {% endcomment %}
-
-{{ content }}
+<div class="container">
+  <div class="row">
+    <div class="col-4">
+        {% include header.html %}
+    </div>
+    <div class="col-8">
+    {{ content }}
+    </div>
+  </div>
+</div>
 
 {% include footer.html %}
 {% comment %}
