--- a/css/style.scss
+++ b/css/style.scss
@@ -9,18 +9,13 @@
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
 
-// Optional
-@import "bootstrap/scss/reboot";
-@import "bootstrap/scss/type";
-@import "bootstrap/scss/images";
-@import "bootstrap/scss/code";
-@import "bootstrap/scss/grid";
 
 // my customization
+
 $font-family-serif:       'Playfair Display', serif !default;
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      'Nunito', sans-serif !default;
+$font-family-sans-serif:      'Nunito', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:            $font-family-sans-serif !default;
 // stylelint-enable value-keyword-case
@@ -35,3 +30,12 @@ $font-weight-bold:            700 !default;
 
 $font-weight-base:            $font-weight-normal !default;
 $line-height-base:            1.5 !default;
+
+
+// Optional
+@import "bootstrap/scss/reboot";
+@import "bootstrap/scss/type";
+@import "bootstrap/scss/images";
+@import "bootstrap/scss/code";
+@import "bootstrap/scss/grid";
+
