--- a/css/site-jdk.scss
+++ b/css/site-jdk.scss
@@ -1,6 +1,6 @@
 ---
-# This is the only file I use now to deliver css to my website.
-# I may end up killing this and bringing it all into the index.html file.
+#
+# This file contains overrides to the pure.css framework v1.01 https://purecss.io/
 # 
 ---
 @charset "utf-8";
@@ -12,110 +12,95 @@
 $font-family-sans-serif:  'Nunito', sans-serif !default;
 $font-family-serif:       'Playfair Display', serif !default;
 
-//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
-$font-family-base:        $font-family-sans-serif !default;
-
-$font-size-base:          14px !default;
-$font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
-
-$font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
-$font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
-$font-size-h3:            ceil(($font-size-base * 1.7)) !default; // ~24px
-$font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-h5:            $font-size-base !default;
-$font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
-
-//** Unit-less `line-height` for use in components like buttons.
-$line-height-base:        1.428571429 !default; // 20/14
-
-//** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
-$line-height-computed:    floor(($font-size-base * $line-height-base)) !default; // ~20px
-
-//** By default, this inherits from the `<body>`.
-$headings-font-family:    'Raleway', sans-serif !default;
-$headings-font-weight:    900 !default;
-$headings-line-height:    1.1 !default;
-$headings-color:          inherit !default;
-
-$font-size-base: 17px;
-$headings-font-weight: 600;
-$blockquote-font-size: $font-size-base;
-
-// Our variables
-$base-font-family: 'Raleway', sans-serif;
-$base-font-size:   16px;
-$base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
-
-$spacing-unit:     30px;
-
-$text-color:       #562800;
-$background-color: #F4E9DF;
-$brand-color:      #2ae;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
-
-// Width of the content area
-$content-width:    800px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
-
-body {
-    background-color:$background-color;
-}
-h1, h2, h3, h4, h5, h6 {
-    color: #222;
-    font-family: $font-family-sans-serif;
-    font-weight: $base-font-weight;
-}
-
-h1 {
-    color: #222;
-    font-family: $font-family-serif;
-    font-weight: 700;
-    font-size: 3em;
-}
-
-
-p, li {
-    color: $text-color;
-    font-family: $font-family-sans-serif;
-    font-weight: $base-font-weight;
-    line-height: $line-height-base;
-
-}
-
-a {
-    color: $brand-color;
-    text-decoration: none;
-
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
-
-    &:hover {
-        color: $text-color;
-        text-decoration: underline;
-    }
-}
-
-ul {
-    list-style:none;
-    text-align: center;
-    padding:0;
-    margin:0;
-}
-
-li {
-//    float: left;
-    margin:0;
-    padding: 0 1em 0 0;
-    text-align: left;
-    text-decoration: none;
-}
+// //** By default, this inherits from the `<body>`.
+// $headings-font-family:    'Raleway', sans-serif !default;
+// $headings-font-weight:    900 !default;
+// $headings-line-height:    1.1 !default;
+// $headings-color:          inherit !default;
+// 
+// //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
+// $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
+// $font-family-base:        $font-family-sans-serif !default;
+// 
+// 
+// 
+// $font-size-base: 17px;
+// $headings-font-weight: 600;
+// $blockquote-font-size: $font-size-base;
+// 
+// // Our variables
+// $base-font-family: 'Raleway', sans-serif;
+// $base-font-size:   16px;
+// $base-font-weight: 400;
+// $small-font-size:  $base-font-size * 0.875;
+// $base-line-height: 1.5;
+// 
+// $spacing-unit:     30px;
+// 
+// $text-color:       #562800;
+// $background-color: #F4E9DF;
+// $brand-color:      #2ae;
+// 
+// $grey-color:       #828282;
+// $grey-color-light: lighten($grey-color, 40%);
+// $grey-color-dark:  darken($grey-color, 25%);
+// 
+// // Width of the content area
+// $content-width:    800px;
+// 
+// $on-palm:          600px;
+// $on-laptop:        800px;
+// 
+// body {
+//     background-color:$background-color;
+// }
+// h1, h2, h3, h4, h5, h6 {
+//     color: #222;
+//     font-family: $font-family-sans-serif;
+//     font-weight: $base-font-weight;
+// }
+// 
+// h1 {
+//     color: #222;
+//     font-family: $font-family-serif;
+//     font-weight: 700;
+//     font-size: 3em;
+// }
+// 
+// 
+// p, li {
+//     color: $text-color;
+//     font-family: $font-family-sans-serif;
+//     font-weight: $base-font-weight;
+//     line-height: $line-height-base;
+// 
+// }
+// 
+// a {
+//     color: $brand-color;
+//     text-decoration: none;
+// 
+//     &:visited {
+//         color: darken($brand-color, 15%);
+//     }
+// 
+//     &:hover {
+//         color: $text-color;
+//         text-decoration: underline;
+//     }
+// }
+// 
+// ul {
+//     list-style:none;
+//     text-align: center;
+//     padding:0;
+//     margin:0;
+// }
+// 
+// li {
+// //    float: left;
+//     margin:0;
+//     padding: 0 1em 0 0;
+//     text-align: left;
+//     text-decoration: none;
+// }
