--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,700|Playfair+Display&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="{{ '/css/pure/base-min.css' | prepend: site.baseurl }}">
-<link rel="stylesheet" href="{{ '/css/pure/grid-min.css' | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ '/css/pure/grids-min.css' | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ '/css/site-jdk.css' | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
