--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,10 +7,22 @@
 <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,700|Playfair+Display&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="{{ '/css/pure/base-min.css' | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ '/css/pure/grids-min.css' | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ '/css/pure/grids-responsive-min.css' | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ '/css/site-jdk.css' | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 {% comment %}
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
+<meta property="og:url" content="https://jdkunesh.com/" />
+<meta property="og:title" content="Jason Kunesh is okay." />
+<meta property="og:description" content="" />
+<meta property="og:image" content="" />
+<!-- 1200x 628-900 (linked image 628, fb image 900, highlighted image 717) 2.7:1 or 16:9 event -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Chicago Design System" />
+<meta property="twitter:description" content="The Chicago Design System is the public visual identity of the City of Chicago. It is an inclusive, equitable, cost saving system for City communication and for Chicagoans to show their civic pride." />
+<meta property="twitter:image" content="https://design.chicago.gov/assets/img/logo/LOGO-Chicago2000x1000-TW.png" />
+<!-- 1024 x 512 2:1/16:9 -->
 {% endcomment %}
+
 </head>
