--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,43 @@
 {% include head.html %}
 <body>
 {% comment %}
-<!--//    
-//-->
+<!--// //-->
 {% endcomment %}
-{% include header.html %}
-
-    {{ content }}
-
-{% include footer.html %}
-
-{% comment %}{% endcomment %}
+<div class="pure-g">
+    <div class="pure-u-1 pure-u-md-1-4">
+        {% include header.html %}
+    </div>
+    <div class="pure-u-1 pure-u-md-3-4">
+        {{ content }}
+    </div>
+</div>
+<div class="pure-g">
+    <div class="pure-u-1 pure-u-md-1-4">
+    </div>
+    <div class="pure-u-1 pure-u-md-3-4">
+        {% include footer.html %}
+{% comment %}
+<!--
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a class="pure-button" href="http://purecss.io">Pure</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="pure-button" href="http://yuilibrary.com">YUI Library</a>
+                    </li>
+                </ul>
+            </nav>
+ -->
+        <div class="pure-menu pure-menu-horizontal">
+            <ul>
+                <li class="pure-menu-item"><a href="http://purecss.io/" class="pure-menu-link">About</a></li>
+                <li class="pure-menu-item"><a href="http://twitter.com/yuilibrary/" class="pure-menu-link">Twitter</a></li>
+                <li class="pure-menu-item"><a href="http://github.com/pure-css/pure/" class="pure-menu-link">GitHub</a></li>
+            </ul>
+        </div>
+{% endcomment %}
+    </div>
+</div>
 </body>
 </html>
