--- a/css/site-jdk.scss
+++ b/css/site-jdk.scss
@@ -5,6 +5,15 @@
 ---
 @charset "utf-8";
 
+
+// reset box model for css3 grid
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+// div { border: 1px dotted #999;}
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
@@ -104,3 +113,53 @@ $font-family-serif:       'Playfair Display', serif !default;
 //     text-align: left;
 //     text-decoration: none;
 // }
+
+
+// some stuff from pure blog view
+/* LAYOUT CSS 
+
+.pure-img-responsive {
+    max-width: 100%;
+    height: auto;
+}
+
+.nav-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.nav-item {
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+}
+.nav-item a {
+    background: transparent;
+    border: 2px solid rgb(176, 202, 219);
+    color: #fff;
+    margin-top: 1em;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    font-size: 85%;
+}
+.nav-item a:hover,
+.nav-item a:focus {
+    border: 2px solid rgb(61, 146, 201);
+    text-decoration: none;
+}
+
+.content-subhead {
+    text-transform: uppercase;
+    color: #aaa;
+    border-bottom: 1px solid #eee;
+    padding: 0.4em 0;
+    font-size: 80%;
+    font-weight: 500;
+    letter-spacing: 0.1em;
+}
+
+.content {
+    padding: 2em 1em 0;
+}
+
+*/
