--- a/css/site-jdk.scss
+++ b/css/site-jdk.scss
@@ -4,115 +4,132 @@
 # 
 ---
 @charset "utf-8";
-
-
 // reset box model for css3 grid
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
+* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
-// div { border: 1px dotted #999;}
 //== Typography
-//
-//## Font, line-height, and color for body text, headings, and more.
-
 $font-family-sans-serif:  'Nunito', sans-serif !default;
 $font-family-serif:       'Playfair Display', serif !default;
+$font-family-base:        $font-family-sans-serif !default;
 
-// //** By default, this inherits from the `<body>`.
-// $headings-font-family:    'Raleway', sans-serif !default;
-// $headings-font-weight:    900 !default;
-// $headings-line-height:    1.1 !default;
-// $headings-color:          inherit !default;
-// 
-// //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-// $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
-// $font-family-base:        $font-family-sans-serif !default;
-// 
-// 
-// 
-// $font-size-base: 17px;
-// $headings-font-weight: 600;
-// $blockquote-font-size: $font-size-base;
-// 
-// // Our variables
-// $base-font-family: 'Raleway', sans-serif;
-// $base-font-size:   16px;
-// $base-font-weight: 400;
-// $small-font-size:  $base-font-size * 0.875;
-// $base-line-height: 1.5;
-// 
-// $spacing-unit:     30px;
-// 
-// $text-color:       #562800;
-// $background-color: #F4E9DF;
-// $brand-color:      #2ae;
-// 
-// $grey-color:       #828282;
-// $grey-color-light: lighten($grey-color, 40%);
-// $grey-color-dark:  darken($grey-color, 25%);
-// 
-// // Width of the content area
-// $content-width:    800px;
-// 
-// $on-palm:          600px;
-// $on-laptop:        800px;
-// 
-// body {
-//     background-color:$background-color;
-// }
-// h1, h2, h3, h4, h5, h6 {
-//     color: #222;
-//     font-family: $font-family-sans-serif;
-//     font-weight: $base-font-weight;
-// }
-// 
-// h1 {
-//     color: #222;
-//     font-family: $font-family-serif;
-//     font-weight: 700;
-//     font-size: 3em;
-// }
-// 
-// 
-// p, li {
-//     color: $text-color;
-//     font-family: $font-family-sans-serif;
-//     font-weight: $base-font-weight;
-//     line-height: $line-height-base;
-// 
-// }
-// 
-// a {
-//     color: $brand-color;
-//     text-decoration: none;
-// 
-//     &:visited {
-//         color: darken($brand-color, 15%);
-//     }
-// 
-//     &:hover {
-//         color: $text-color;
-//         text-decoration: underline;
-//     }
-// }
-// 
-// ul {
-//     list-style:none;
-//     text-align: center;
-//     padding:0;
-//     margin:0;
-// }
-// 
-// li {
-// //    float: left;
-//     margin:0;
-//     padding: 0 1em 0 0;
-//     text-align: left;
-//     text-decoration: none;
-// }
+//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
+$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
+
+//== unused???
+$font-size-base: 17px;
+$font-size-small:  $font-size-base * 0.875;
+$font-weight-base: 400;
+$line-height-base: 1.5;
+
+$headings-font-weight:    700 !default;
+$headings-line-height:    1.1 !default;
+$blockquote-font-size: $font-size-base;
+
+//== COLOR
+
+$primary-color:              #2ae !default;    // aqua-ish?
+$secondary-color:            #562800 !default; // old text brown
+$another-primary-color:      #2C5491 !default; // close enough to the primary?
+
+$black:                      #000000 !default;
+$blue:                       #0d6efd !default;
+$indigo:                     #6610f2 !default;
+$purple:                     #4C2C92 !default;
+$pink:                       #d63384 !default;
+$red:                        #dc3545 !default;
+$orange:                     #fd7e14 !default;
+$yellow:                     #ffc107 !default;
+$green:                      #28a745 !default;
+$teal:                       #20c997 !default;
+$cyan:                       #17a2b8 !default;
+$white:                      #ffffff !default;
+$offwhite:                   #FFF4F4 !default;
+
+$grey:                       #494440;
+$grey-light:                 #E4E2E0;
+$grey-dark:                  #494440;
+
+$background-color:           $offwhite;
+$text-color:                 $secondary-color;
+$brand-color:                $primary-color;
+
+$color-link:                 $another-primary-color;
+$color-active:               $teal;
+$color-hover:                $orange;
+$color-focus:                $cyan;
+$color-visited:              $purple;
+
+
+//== TOP LEVEL ELEMENTS
+
+body {
+    background-color: $background-color;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: $grey-dark;
+    font-family: $font-family-sans-serif;
+    font-weight: $headings-font-weight;
+    line-height: $headings-line-height;
+}
+
+h1 {
+    font-family: $font-family-serif;
+    font-size: 2em;
+}
+
+h2 { font-size: 1.5em; }
+h3 { font-size: 1.17em; }
+h4 { font-size: 1em; }
+h5 { font-size: 0.83em; }
+h6 { font-size: 0.75em; }
+
+header h1 { padding: 1rem; }
+
+p, li {
+    color: $text-color;
+    font-family: $font-family-sans-serif;
+    font-weight: $font-weight-base;
+    line-height: $line-height-base;
+
+}
+
+a {
+    color: $color-link;
+    text-decoration: none;
+
+    &:visited {
+        color: $color-visited;
+    }
+
+    &:focus {
+        color: $color-focus;
+        text-decoration: underline;
+    }
+    &:hover {
+        color: $color-hover;
+        text-decoration: underline;
+    }
+    &:active {
+        color: $color-active;
+        text-decoration: underline;
+    }
+}
+
+ul {
+    list-style:none;
+    text-align: center;
+    padding:0;
+    margin:0;
+}
+
+li {
+//    float: left;
+    margin:0;
+    padding: 0 1em 0 0;
+    text-align: left;
+    text-decoration: none;
+}
 
 
 // some stuff from pure blog view
