--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="{{ '/css/pure/base-min.css' | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ '/css/pure/grids-min.css' | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ '/css/pure/grids-responsive-min.css' | prepend: site.baseurl }}">
-<link rel="stylesheet" href="{{ '/css/site-jdk.css' | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ '/css/jdk20v1.css' | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 {% comment %}
