--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,5 +7,10 @@
       <li>{{ item.text}}</li>
     </a>
   {% endfor %}
+  {% for item in site.data.navigation.footer %}
+    <a href="{{ site.baseurl }}{{ item.url }}">
+      <li>{{ item.text}}</li>
+    </a>
+  {% endfor %}
 </ul>
 </nav>
