--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,11 @@
-<header><h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1></header>
-
+<header><a href="{{ site.baseurl }}/"><h1>{{ site.title }}</h1></a>
 <nav>
-<ul>
-  {% for item in site.data.navigation.primary %}
-    <a href="{{ site.baseurl }}{{ item.url }}">
-      <li>{{ item.text}}</li>
-    </a>
-  {% endfor %}
-  {% for item in site.data.navigation.footer %}
-    <a href="{{ site.baseurl }}{{ item.url }}">
-      <li>{{ item.text}}</li>
-    </a>
-  {% endfor %}
-</ul>
+  <ul>
+    {% for item in site.data.navigation.primary %}
+      <a href="{{ site.baseurl }}{{ item.url }}">
+        <li>{{ item.text}}</li>
+      </a>
+    {% endfor %}
+  </ul>
 </nav>
+</header>
