--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
 <nav>
 <ul>
-  {% for item in site.data.navigation.footer %}
+  {% for item in site.data.navigation.secondary %}
     <a href="{{ site.baseurl }}{{ item.url }}">
       <li>{{ item.text}}</li>
     </a>
