--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,4 +1,12 @@
 ---
 layout: default
 ---
+
+<div class="pure-g"><div class="pure-u-1 pure-u-md-1-4">
+{% include header.html %}
+</div><div class="pure-u-1 pure-u-md-3-4" style="padding:1rem;">
 {{ content }}
+</div></div>
+<div class="pure-g"><div class="pure-u-1">
+{% include footer.html %}
+</div></div>
