--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,16 +1,11 @@
 ---
 layout: default
-# unused 1/2020
-
 ---
-<article class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <div class="post-content">
-    {{ content }}
-  </div>
-
-</article>
+<div class="pure-g"><div class="pure-u-1 pure-u-md-1-4">
+{% include header.html %}
+</div><div class="pure-u-1 pure-u-md-3-4" style="padding:1rem;">
+{{ content }}
+</div></div>
+<div class="pure-g"><div class="pure-u-1">
+{% include footer.html %}
+</div></div>
