--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,9 @@ layout: default
 <div class="pure-g"><div class="pure-u-1 pure-u-md-1-3">
 {% include header.html %}
 </div><div class="pure-u-1 pure-u-md-2-3" style="padding:1rem;">
+{% if page.title != null %}
+<h1>{{page.title}}</h1>
+{% endif%}
 {{ content }}
 </div></div>
 <div class="pure-g"><div class="pure-u-1">
