updating image for pure grid

--- a/_includes/case.html
+++ b/_includes/case.html
@@ -10,7 +10,7 @@
   <li><a href="{{ site.baseurl }}{{ next_case.url }}">Next up {{ next_case.title }}</a></li>
 </ul>
 
-<img src="{{ case.image }}" alt="{{ case.alt_text }}" width="50%"/>
+<img src="{{ case.image }}" alt="{{ case.alt_text }}" class="pure-img" />
 
 <h2>{{case.team }}</h2>
 <p>{{ case.role }}</p>
