--- a/_includes/media.html
+++ b/_includes/media.html
@@ -1,3 +1,3 @@
 {% if thing.type == "image" %}
-<img src="{{ thing.url }}" alt="{{ thing.alt_text }} /">
+<img src="{{ thing.url }}" alt="{{ thing.alt_text }} class="pure-img" /">
 {% endif %}
