--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,3 @@
-<header><a href="{{ site.baseurl }}/"><h1>{{ site.title }}</h1></a>
-<nav>
-  <ul>
-    {% for item in site.data.navigation.primary %}
-      <a href="{{ site.baseurl }}{{ item.url }}">
-        <li>{{ item.text}}</li>
-      </a>
-    {% endfor %}
-  </ul>
-</nav>
+<header>
+    <a href="{{ site.baseurl }}/"><h1>{{ site.title }}</h1></a>
 </header>
