--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -155,11 +155,11 @@ p, li {
 .content {
     padding: 2em 1em 0;
 }
-.1-box {
+.prem {
     padding: 1rem;
 }
 
-header ul li, footer ul li {float:left;}
+//header ul li, footer ul li {float:left;}
 footer { text-align: center;}
 
 // some stuff from pure blog view
