--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,12 +1,14 @@
 ---
 layout: default
 ---
-
-<div class="pure-g"><div class="pure-u-1 pure-u-md-1-4">
+<div class="pure-g">
+<div class="pure-u-1 prem">
 {% include header.html %}
-</div><div class="pure-u-1 pure-u-md-3-4" style="padding:1rem;">
+</div>
+</div>
+
 {{ content }}
-</div></div>
-<div class="pure-g"><div class="pure-u-1">
+
+<div class="pure-g"><div class="pure-u-1 prem">
 {% include footer.html %}
 </div></div>
