--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,18 @@
 ---
 layout: default
 ---
-<div class="pure-g"><div class="pure-u-1 pure-u-md-1-3">
+<div class="pure-g"><div class="pure-u-1 pure-u-md-1-3 prem">
 {% include header.html %}
-</div><div class="pure-u-1 pure-u-md-2-3" style="padding:1rem;">
+<nav>
+  <ul>
+    {% for item in site.data.navigation.primary %}
+      <a href="{{ site.baseurl }}{{ item.url }}">
+        <li>{{ item.text}}</li>
+      </a>
+    {% endfor %}
+  </ul>
+</nav>
+</div><div class="pure-u-1 pure-u-md-2-3 prem">
 {% if page.title != null %}
 <h1>{{page.title}}</h1>
 {% endif%}
