--- a/_includes/era.html
+++ b/_includes/era.html
@@ -2,9 +2,23 @@
 {% assign era = site.data.work[current_index] %}
 {% assign next_era = site.data.work[next_index] %}
 {% assign previous_era = site.data.work[previous_index] %}
-<ul title="other work">
+<nav>
+  <ul>
+    {% for item in site.data.navigation.primary %}
+      <a href="{{ site.baseurl }}{{ item.url }}">
+        <li>{{ item.text}}</li>
+      </a>
+    {% endfor %}
   <li><a href="{{ site.baseurl }}{{ previous_era.url }}">Back to {{ previous_era.title }}</a></li>
   <li><a href="{{ site.baseurl }}{{ next_era.url }}">Next up {{ next_era.title }}</a></li>
+  </ul>
+</nav>
+</div><div class="pure-u-1 pure-u-md-2-3 prem">
+{% if page.title != null %}
+<h1>{{page.title}}</h1>
+{% endif%}
+
+<ul title="other work">
 </ul>
 <img src="{{ era.image }}" alt="{{ era.alt_text }}" class="pure-img" />
 {% if era.description != null %}
