--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,7 +43,7 @@
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 
-
 {% endcomment %}
+<script src="https://kit.fontawesome.com/3789fe5ab2.js" crossorigin="anonymous"></script>
 
 </head>
