--- a/_includes/case.html
+++ b/_includes/case.html
@@ -1,7 +1,7 @@
-{% assign current_work = site.data.work[work_index] %}
+{% assign current = site.data.work[work_index] %}
 {% assign case = site.data.work[work_index].cases[case_index]%}
-{% assign next_case = site.data.work[work_index].cases[next_index] %}
-{% assign previous_case = site.data.work[work_index].cases[previous_index] %}
+{% assign next = site.data.work[work_index].cases[next_index] %}
+{% assign previous = site.data.work[work_index].cases[previous_index] %}
 
 
 
@@ -12,9 +12,9 @@
         <li>{{ item.text}}</li>
       </a>
     {% endfor %}
-      <li><a href="{{ site.baseurl }}{{ previous_case.url }}">Back to {{ previous_case.title }}</a></li>
-      <li><a href="{{ site.baseurl }}{{ current_work.url }}">Back to {{ current_work.title }}</a></li>
-      <li><a href="{{ site.baseurl }}{{ next_case.url }}">Next up {{ next_case.title }}</a></li>
+      <li><a href="{{ site.baseurl }}{{ previous.url }}"><i class="fas fa-chevron-circle-left"></i></a></li>
+      <li><a href="{{ site.baseurl }}{{ current.url }}"><i class="fas fa-chevron-circle-up"></i></a></li>
+      <li><a href="{{ site.baseurl }}{{ next.url }}"><i class="fas fa-chevron-circle-right"></i></a></li>
   </ul>
 </nav>
 </div><div class="pure-u-1 pure-u-md-2-3 prem">
